[package]
name = "cc-utils"
description = "Rust Fullstack utils (strict error handling, `Consider` trait, MessagePack support, etc.) for Salvo and Yew/Dioxus/Leptos/*"
version = "0.5.7"
edition = "2024"
license = "MIT"
authors = ["Klimenty Titov <aclo.create@gmail.com>"]
repository = "https://github.com/markcda/cc-utils"

[features]
default = ["salvo", "reqwest"]
salvo = ["dep:salvo"]
reqwest = ["dep:reqwest"]

[dependencies]
anyhow = "1.0"
reqwest = { git = "https://github.com/markcda/reqwest.git", branch = "msgpack-support", default-features = false, features = ["json", "rustls-tls"], optional = true }
rmp-serde = "1.3"
salvo = { version = "0.76.2", features = ["oapi", "rustls"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
